--- a/src/main/webapp/views/index.html
+++ b/src/main/webapp/views/index.html
@@ -59,6 +59,7 @@
 <script src="bower_components/angular-aria/angular-aria.min.js"></script>
 <script src="bower_components/angular-messages/angular-messages.min.js"></script>
 <script src="bower_components/angular-material/angular-material.min.js"></script>
+<script src="bower_components/ng-file-upload/ng-file-upload.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.6.0/angular-material-icons.min.js"></script>
 
 <script src="/js/analysis.js"></script>
