--- a/src/main/webapp/views/index.html
+++ b/src/main/webapp/views/index.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css"/>
     <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css"/>
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
+    <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="bower_components/jqcloud2/dist/jqcloud.min.css">
+
     <link rel="stylesheet" href="/styles/app.css"/>
 
     <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
@@ -65,6 +68,11 @@
 <script src='bower_components/lodash/dist/lodash.min.js'></script>
 <script src='bower_components/angular-simple-logger/dist/angular-simple-logger.min.js'></script>
 <script src='bower_components/angular-google-maps/dist/angular-google-maps.min.js'></script>
+<script src="bower_components/Chart.js/Chart.min.js"></script>
+<script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/jqcloud2/dist/jqcloud.min.js"></script>
+<script src="bower_components/angular-jqcloud/angular-jqcloud.js"></script>
 
 <script src="/js/analysis.js"></script>
 <script src="/js/selection.js"></script>
