--- a/src/main/webapp/views/index.html
+++ b/src/main/webapp/views/index.html
@@ -64,15 +64,18 @@
 <script src="bower_components/angular-material/angular-material.min.js"></script>
 <script src="bower_components/ng-file-upload/ng-file-upload.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.6.0/angular-material-icons.min.js"></script>
-<script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
+<script src='//maps.googleapis.com/maps/api/js?libraries=visualization'></script>
 <script src='bower_components/lodash/dist/lodash.min.js'></script>
 <script src='bower_components/angular-simple-logger/dist/angular-simple-logger.min.js'></script>
-<script src='bower_components/angular-google-maps/dist/angular-google-maps.min.js'></script>
+<script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/testapp/scripts/markerclusterer.js"></script>
+<script src="bower_components/ngmap/build/scripts/ng-map.min.js"></script>
 <script src="bower_components/Chart.js/Chart.min.js"></script>
 <script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/jqcloud2/dist/jqcloud.min.js"></script>
 <script src="bower_components/angular-jqcloud/angular-jqcloud.js"></script>
+<script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
+
 
 <script src="/js/analysis.js"></script>
 <script src="/js/selection.js"></script>
