--- a/src/main/webapp/views/index.html
+++ b/src/main/webapp/views/index.html
@@ -67,7 +67,7 @@
 <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 <script src="bower_components/ng-file-upload/ng-file-upload.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.6.0/angular-material-icons.min.js"></script>
-<script src='//maps.googleapis.com/maps/api/js?libraries=visualization,places'></script>
+<script src='//maps.googleapis.com/maps/api/js?v=3&libraries=visualization,places'></script>
 <script src='bower_components/lodash/dist/lodash.min.js'></script>
 <script src='bower_components/angular-simple-logger/dist/angular-simple-logger.min.js'></script>
 <script src="https://rawgit.com/allenhwkim/angularjs-google-maps/master/testapp/scripts/markerclusterer.js"></script>
