--- a/src/main/webapp/views/selection.html
+++ b/src/main/webapp/views/selection.html
@@ -42,7 +42,7 @@
             <md-card-header>
                 <md-card-header-text>
                     <span class="md-title">Time</span>
-                    <span class="md-subhead">{{filter.time ? (filter.time[0]) + " to " + (filter.time[1]) : "All"}}</span>
+                    <span class="md-subhead">{{filter.time ? (filter.time[0]*60000 | date: 'dd/MM/yyyy hh:mm') + " to " + (filter.time[1]*60000 | date: 'dd/MM/yyyy hh:mm') : "All"}}</span>
                     <!--*60000 | date:"MM/dd/yyyy, h:mma"-->
                 </md-card-header-text>
             </md-card-header>
